force-app/main/default/objects/smagicinteract__Compliance_Configuration_Audit__c/smagicinteract__Compliance_Configuration_Audit__c.object-meta.xml
<CustomObject>
    <label>Compliance Configuration Audit</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Configuration Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>