force-app/main/default/objects/smagicinteract__Compliance_Configuration_Audit__c/fields/smagicinteract__Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>