force-app/main/default/objects/smagicinteract__Compliance_Configuration_Audit__c/fields/smagicinteract__Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Metadata_Name__c</fullName>
    <label>Metadata Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>