force-app/main/default/objects/smagicinteract__Compliance_Configuration_Audit__c/fields/smagicinteract__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>