force-app/main/default/objects/smagicinteract__Compliance_Configuration_Audit__c/fields/smagicinteract__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Old_Value__c</fullName>
    <label>Old Value</label>
    <type>TextArea</type>
</CustomField>